# vue_portfolio

./: .gitignore
backend/: .env  index.js  package-lock.json  package.json
backend/controllers/: api.js  auth.js  email.js
backend/models/: admin.js  client.js  project.js
backend/service/: db.js
front-end/: package-lock.json  package.json
front-end/public/: index.html
front-end/src/: App.vue  main.js
front-end/src/assets/: style.css
front-end/src/components/: Footer.vue  Header.vue
front-end/src/router/: index.js
front-end/src/views/: Contact.vue  Home.vue  ProjectDetail.vue  ProjectList.vue  Resume.vue
rust_backend/: Cargo.toml
rust_backend/migrations/: 20220825200704_create_project_table.sql
rust_backend/src/: app.rs  lib.rs  main.rs  utils.rs
rust_backend/src/domain/: contact.rs  mod.rs  project.rs  user.rs
rust_backend/src/routes/: projects.rs
