[package]
name = "rust_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
serde_json = "1.0.85"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
jsonwebtoken = "7.2"
validator = "0.16"

[dependencies.sqlx]
version = "0.6.1"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "sqlite",
    "uuid",
    "migrate",
    "offline"
]
